Geany 1.22 (unreleased)

    Editor
    * Update Scintilla to version 2.29.


Geany 0.21 (October 2, 2011)

    General
    * Bump dependencies to GTK >= 2.12, GLib >= 2.16 and GIO.
    * Add support for real-time symbol parsing.
    * Remove old filetype templates support - use custom file
      templates instead.
    * Add support for detecting the indentation width from the file
      content.

    Bug fixes
    * Fix generating tag files (-g) and --ft-names segfault.
    * Replace dates on template insertion, not when loading templates.
    * Fix segfault when inserting e.g. fileheader template when the
      template file is empty (#3070913, lphilpot).
    * Use the same indentation for all templates (Matthew Brush,
      #3193527).
    * Fix loading of non-UTF-8 templates.
    * Fix completion and word completion with non-ASCII characters
      (#3313351).
    * Fix HTML content-type detection (#3300703).
    * Fix pattern filtering when using Find in Files not to search in
      sub-directories.
    * Add a workaround to prevent Geany from crashing during loading of
      a LaTeX-file containing linebreaks inside headings.

    Interface
    * Add 'Save As' toolbar button option (Matthew Brush, #3153490).
    * Add 'Open in New Window' command in the notebook tab menu
      (Matthew Brush, #3118059).
    * Color schemes: use name and description for menu item and
      tooltip (Matthew Brush).
    * Shift-Enter in search dialog and toolbar search entries now
      searches backwards.
    * Improve `Set Custom Commands` dialog.
    * Always destroy open and save dialogs after use (#3311258,
      #3304273, #3201050, #3163742, #3153120, #2985896).
    * Add UI to edit formerly hidden preferences (Dimitar Zhekov,
      #3313315).

    Editor
    * Update Scintilla to version 2.25.
    * Fix snippets bug: {ob}pc{cb} replaced by '%' instead of {pc}.
    * Fix multiple snippet cursor positions for Tabs + Spaces mode.